--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "@fontsource/roboto": "^5.0.8",
     "@graasp/apps-query-client": "3.4.1",
     "@graasp/sdk": "3.6.0",
-    "@mui/icons-material": "5.15.6",
-    "@mui/lab": "5.0.0-alpha.162",
-    "@mui/material": "5.15.6",
-    "@sentry/react": "7.95.0",
+    "@mui/icons-material": "5.15.7",
+    "@mui/lab": "5.0.0-alpha.163",
+    "@mui/material": "5.15.7",
+    "@sentry/react": "7.99.0",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
-    "@types/node": "20.11.6",
+    "@types/node": "20.11.13",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "i18next": "23.7.18",
+    "i18next": "23.8.2",
     "lodash.isequal": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -62,21 +62,23 @@
     "cypress:open": "env-cmd -f ./.env.test cypress open",
     "test": "concurrently -k -s first \"yarn start:test\" \"yarn test:ci\" ",
     "test:ci": "env-cmd -f ./.env.test cypress run --browser chrome --headless && nyc report --reporter=text --reporter=text-summary",
-    "cov:report": "open ./coverage/lcov-report/index.html"
+    "cov:report": "open ./coverage/lcov-report/index.html",
+    "prepare": "husky",
+    "commitlint": "commitlint --edit"
   },
   "devDependencies": {
-    "@commitlint/cli": "18.5.0",
-    "@commitlint/config-conventional": "18.5.0",
+    "@commitlint/cli": "18.6.0",
+    "@commitlint/config-conventional": "18.6.0",
     "@cypress/code-coverage": "3.12.19",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/i18n": "0.13.10",
     "@types/lodash.isequal": "^4.5.8",
     "@types/uuid": "9.0.8",
-    "@typescript-eslint/eslint-plugin": "6.19.1",
-    "@typescript-eslint/parser": "6.19.1",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
     "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "8.2.2",
-    "cypress": "13.6.3",
+    "cypress": "13.6.4",
     "env-cmd": "10.1.0",
     "eslint": "8.56.0",
     "eslint-config-airbnb": "19.0.4",
@@ -90,9 +92,9 @@
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "husky": "8.0.3",
+    "husky": "9.0.7",
     "miragejs": "^0.1.48",
-    "nock": "^13.5.0",
+    "nock": "^13.5.1",
     "nyc": "15.1.0",
     "prettier": "3.2.4",
     "uuid": "9.0.1",
