--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -29,14 +29,23 @@ jobs:
       - name: Yarn install and Cache dependencies
         uses: graasp/graasp-deploy/.github/actions/yarn-install-and-cache@v1
 
+      - name: Set version
+        id: set-version
+        run: |
+          VERSION_REPO_DISPATCH=${{ github.event.client_payload.tag }}
+          VERSION_REF=${{ github.ref_name }}
+          VERSION_COMMIT=${{ github.sha }}
+          echo "VERSION=${VERSION_REPO_DISPATCH:-${VERSION_REF:-${VERSION_COMMIT:-"undefined"}}}" >> "$GITHUB_OUTPUT"
+
       - name: Yarn build
         # Set environment variables required to perform the build. These are only available to this step
         env:
           VITE_API_HOST: ${{ vars.API_HOST }}
           VITE_GRAASP_APP_KEY: ${{ secrets.APP_KEY }}
-          VITE_SENTRY_ENV: staging
+          VITE_SENTRY_ENV: ${{ vars.SENTRY_ENV }}
           VITE_SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
-          VITE_VERSION: ${{ github.event.client_payload.tag }}
+          VITE_VERSION: ${{ steps.set-version.outputs.VERSION }}
+          VITE_WS_HOST: ${{ vars.WS_HOST }}
           # add any env variable needed by your app here
         run: yarn build
         shell: bash
@@ -46,7 +55,7 @@ jobs:
         with:
           # Replace input build-folder or version if needed
           build-folder: 'build'
-          graasp-app-id: ${{ secrets.APP_ID }}
+          graasp-app-id: ${{ vars.APP_ID }}
           version: 'latest'
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_STAGE }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_STAGE }}
