--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "18.2.71",
     "@types/react-dom": "18.2.22",
     "i18next": "23.10.1",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -72,6 +73,7 @@
     "@cypress/code-coverage": "3.12.32",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/i18n": "0.13.10",
+    "@types/lodash.clonedeep": "^4",
     "@types/lodash.isequal": "^4.5.8",
     "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "7.4.0",
