refactor: move status chips in graasp-ui

--- a/package.json
+++ b/package.json
@@ -22,16 +22,15 @@
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
     "@fontsource/roboto": "^5.0.8",
-    "@graasp/apps-query-client": "3.4.10",
-    "@graasp/sdk": "4.5.0",
-    "@graasp/ui": "4.17.1",
+    "@graasp/apps-query-client": "3.4.15",
+    "@graasp/sdk": "4.12.0",
+    "@graasp/ui": "4.19.0",
     "@mui/icons-material": "5.15.18",
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "5.15.18",
     "@sentry/react": "7.116.0",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
-    "@types/node": "20.12.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "i18next": "23.11.5",
@@ -76,6 +75,7 @@
     "@types/i18n": "0.13.12",
     "@types/lodash.clonedeep": "^4",
     "@types/lodash.isequal": "^4.5.8",
+    "@types/node": "^20.12.12",
     "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
