--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "typeRoots": ["node_modules", "node_modules/@types", "./src/@types"],
-    "types": ["vite/client", "cypress"],
+    "types": ["vite/client", "cypress", "node"],
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./*"]
