--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@emotion/react": "11.13.3",
     "@emotion/styled": "11.13.0",
     "@fontsource/roboto": "^5.0.8",
-    "@graasp/apps-query-client": "3.4.15",
-    "@graasp/sdk": "4.13.0",
+    "@graasp/apps-query-client": "^3.7.1",
+    "@graasp/sdk": "^4.33.2",
     "@graasp/ui": "5.2.2",
     "@mui/icons-material": "6.1.6",
     "@mui/lab": "5.0.0-alpha.173",
