fix: update deps (#309)
* fix: upgrade for new version of the api

* fix: udpate deps

--- a/package.json
+++ b/package.json
@@ -21,24 +21,25 @@
   "dependencies": {
     "@emotion/react": "11.13.3",
     "@emotion/styled": "11.13.0",
-    "@fontsource/roboto": "^5.0.8",
-    "@graasp/apps-query-client": "3.4.15",
-    "@graasp/sdk": "4.13.0",
-    "@graasp/ui": "5.2.2",
+    "@fontsource/roboto": "^5.1.0",
+    "@graasp/apps-query-client": "^3.7.1",
+    "@graasp/sdk": "^4.33.2",
+    "@graasp/ui": "5.4.0",
     "@mui/icons-material": "6.1.6",
-    "@mui/lab": "5.0.0-alpha.173",
+    "@mui/lab": "6.0.0-beta.14",
     "@mui/material": "6.1.6",
     "@sentry/react": "8.36.0",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "i18next": "23.15.2",
+    "date-fns": "^4.1.0",
+    "i18next": "23.16.4",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-i18next": "15.0.3",
+    "react-i18next": "15.1.0",
     "react-toastify": "10.0.6",
     "typescript": "5.6.3"
   },
@@ -73,14 +74,14 @@
     "@cypress/code-coverage": "3.13.5",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/i18n": "0.13.12",
-    "@types/lodash.clonedeep": "^4",
+    "@types/lodash.clonedeep": "^4.5.9",
     "@types/lodash.isequal": "^4.5.8",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.17.4",
     "@types/uuid": "10.0.0",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "concurrently": "8.2.2",
+    "@typescript-eslint/eslint-plugin": "8.12.2",
+    "@typescript-eslint/parser": "8.12.2",
+    "@vitejs/plugin-react": "^4.3.3",
+    "concurrently": "9.0.1",
     "cypress": "13.15.1",
     "env-cmd": "10.1.0",
     "eslint": "8.57.1",
@@ -88,22 +89,22 @@
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-config-react-app": "7.0.1",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-cypress": "3.6.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-cypress": "4.1.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "5.0.0",
     "husky": "9.1.6",
     "miragejs": "^0.1.48",
-    "nock": "^13.5.1",
+    "nock": "^13.5.5",
     "nyc": "17.1.0",
     "prettier": "3.3.3",
-    "uuid": "10.0.0",
-    "vite": "^5.0.12",
+    "uuid": "11.0.2",
+    "vite": "^5.4.10",
     "vite-plugin-checker": "^0.8.0",
-    "vite-plugin-istanbul": "^6.0.0"
+    "vite-plugin-istanbul": "^6.0.2"
   },
   "browserslist": {
     "production": [
